welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:17: error: too many arguments for method goAndGet: ()Unit
goAndGet(6) 
        ^